<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_parent_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:context=".presentation.detailuser.view.DetailUserActivity"
            tools:visibility="visible">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_image_view_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                app:civ_border_color="@android:color/black"
                app:civ_border_width="1dp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_name"
                style="@style/Text.SubTitle.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/circle_image_view_avatar"
                tools:text="Jake Wharton" />

            <TextView
                android:id="@+id/text_view_user_name"
                style="@style/Text.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@+id/text_view_name"
                app:layout_constraintStart_toStartOf="@+id/text_view_name"
                app:layout_constraintTop_toBottomOf="@+id/text_view_name"
                tools:text="\@JakeWharton" />

            <TextView
                android:id="@+id/text_view_location"
                style="@style/Text.Body1.Drawable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_location_on"
                app:layout_constraintStart_toStartOf="@+id/text_view_user_name"
                app:layout_constraintTop_toBottomOf="@+id/text_view_user_name"
                tools:text="Pittsburgh, PA, USA" />

            <TextView
                android:id="@+id/text_view_work"
                style="@style/Text.Body1.Drawable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_work"
                app:layout_constraintStart_toStartOf="@+id/text_view_location"
                app:layout_constraintTop_toBottomOf="@+id/text_view_location"
                tools:text="Google, Inc." />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#dddddd"
                app:layout_constraintTop_toBottomOf="@+id/text_view_work" />

            <TextView
                android:id="@+id/text_view_repositories_label"
                style="@style/Text.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repositories"
                app:layout_constraintBottom_toBottomOf="@+id/circle_image_view_avatar"
                app:layout_constraintEnd_toEndOf="@+id/text_view_repositories"
                app:layout_constraintStart_toStartOf="@+id/text_view_repositories"
                app:layout_constraintTop_toBottomOf="@+id/text_view_repositories" />

            <TextView
                android:id="@+id/text_view_followers_label"
                style="@style/Text.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                app:layout_constraintEnd_toEndOf="@+id/text_view_followers"
                app:layout_constraintStart_toStartOf="@+id/text_view_followers"
                app:layout_constraintTop_toTopOf="@+id/text_view_repositories_label" />

            <TextView
                android:id="@+id/text_view_following_label"
                style="@style/Text.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                app:layout_constraintEnd_toEndOf="@+id/text_view_following"
                app:layout_constraintStart_toStartOf="@+id/text_view_following"
                app:layout_constraintTop_toTopOf="@+id/text_view_followers_label" />

            <TextView
                android:id="@+id/text_view_following"
                style="@style/Text.Title.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_followers"
                app:layout_constraintTop_toTopOf="@+id/text_view_followers"
                tools:text="12" />

            <TextView
                android:id="@+id/text_view_followers"
                style="@style/Text.Title.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/text_view_following"
                app:layout_constraintStart_toEndOf="@+id/text_view_repositories"
                app:layout_constraintTop_toTopOf="@+id/text_view_repositories"
                tools:text="56995" />

            <TextView
                android:id="@+id/text_view_repositories"
                style="@style/Text.Title.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_repositories_label"
                app:layout_constraintEnd_toStartOf="@+id/text_view_followers"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/circle_image_view_avatar"
                app:layout_constraintTop_toTopOf="@+id/circle_image_view_avatar"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="102" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/view_pager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tab_layout" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_action_button_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_favorite_border"
                app:tint="@android:color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_frame_layout_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tab_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/shimmer_detail_user" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>